Fix z-index for proper positioning of logo

--- a/styles.css
+++ b/styles.css
@@ -146,6 +146,8 @@ a {
   height: 100vh;
   display: flex;
   flex-direction: column;
+  z-index: 1;
+  position: relative;
 }
 
 .section-two-title {
@@ -264,6 +266,7 @@ footer {
   color: white;
   position: fixed;
   bottom: 0%;
+  z-index: 2;
 }
 
 /*! MEDIA QUERY TO POSITION CVA LOGO IN SMALLER SCREENS */
